Catch runtime errors and report line number

--- a/example.html
+++ b/example.html
@@ -13,6 +13,8 @@
         domino.bounciness = 0 // Line 13
       }
 
+      unknownfunction();
+
       for (let x = 200; x < width - 200; x = x + 60) {
         placeDomino(x, 200)
       }
