Catch syntax errors

--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
   <body>
     <script type="kidjs">
 
-      function placeDomino(x, y) { // Line 10
+      fnction placeDomino(x, y) { // Line 10
         let domino = rect(x, y, 20, 100) // Line 11
         domino.anchored = false // Line 12
         domino.bounciness = 0 // Line 13
