Added physics body to text objects

--- a/example.html
+++ b/example.html
@@ -7,7 +7,10 @@
   <body>
     <script type="kidjs">
 
-      function placeDomino(x, y) {
+      let test = write(500, 200, 'test');
+      test.anchored = false;
+
+      /*function placeDomino(x, y) {
         let domino = rect(x, y, 20, 100)
         domino.anchored = false
         domino.bounciness = 0
@@ -40,7 +43,7 @@
 
       on('mousedown', start)
       on('mousemove', dragging)
-      on('mouseup', release)
+      on('mouseup', release)*/
 
     </script>
   </body>
