--- a/example.html
+++ b/example.html
@@ -7,6 +7,8 @@
   <body>
     <script type="kidjs">
 
+      import "neural-network"
+
       function placeDomino(x, y) {
         let domino = rect(x, y, 20, 100)
         domino.anchored = false
