Use setter and getter to change angle when rotating

--- a/examples/group.html
+++ b/examples/group.html
@@ -51,6 +51,12 @@
 
       on('keydown', move)
 
+      function crash() {
+        spaceship.anchored = false
+      }
+
+      on('click', crash)
+
     </script>
   </body>
 </html>
