--- a/examples/group.html
+++ b/examples/group.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Dominos</title>
+    <title>Group</title>
     <script src="../dist/kid.js"></script>
   </head>
   <body>
