Cleaned up group code

--- a/examples/group.html
+++ b/examples/group.html
@@ -33,8 +33,8 @@
       burner.color = 'lightgray'
 
       let spaceship = group(flame1, flame2, shipBody, leftWing, rightWing, shipWindow, burner);
-      spaceship.x = width / 2
-      spaceship.y = height / 2
+      //spaceship.x = width / 2
+      //spaceship.y = height / 2
       //spaceship.anchored = false
 
       function move(key) {
