Corrected position of elongated triangles

--- a/examples/group.html
+++ b/examples/group.html
@@ -67,6 +67,13 @@
       let ball = circle(200,200,30)
       ball.anchored = false
 
+      let a = triangle(200, 200, 50, 100)
+      a.anchored = false
+      let b = circle(300, 200, 50)
+      let c = star(400, 200, 50)
+      let d = pentagon(500, 200, 50)
+      let e = triangle(1000, 200, 50)
+
     </script>
   </body>
 </html>
